--- a/lessons/11-css-specificity/index.html
+++ b/lessons/11-css-specificity/index.html
@@ -7,10 +7,10 @@
         color: red;
       }
       p {
-        font-size: 32px;
+        font-size: 14px;
       }
       header {
-        text-align: right;
+        text-align: center;
       }
       nav ul {
         list-style: none;
@@ -20,7 +20,7 @@
         display: inline-block;
       }
       nav a {
-        color: green;
+        color: #00aced;
       }
     </style>
   </head>
