--- a/lessons/07-html-forms/index.html
+++ b/lessons/07-html-forms/index.html
@@ -6,13 +6,21 @@
         <h1>Create User</h1>
         <hr/>
         <form action="create-user.html" method="get">
-            <label>Email:</label>
-            <input type="email" name="email" placeholder="email" required/> <br>
-            <label>Username:</label>
-            <input type="text" name="username" placeholder="username" size="30" maxlength="12"/> <br>
-            <label>Password:</label>
-            <input type="password" name="password" placeholder="password" size="30" maxlength="8" required/> <br>
-            <label>Bio:</label> <br>
+            <div>
+                <label>Email:</label>
+                <input type="email" name="email" placeholder="email" required/> 
+            </div>
+            <div>
+                <label>Username:</label>
+                <input type="text" name="username" placeholder="username" size="30" maxlength="12"/>
+            </div>
+            <div>
+                <label>Password:</label>
+                <input type="password" name="password" placeholder="password" size="30" maxlength="8" required/>
+            </div>
+            <div>
+                <label>Bio:</label>
+            </div>
             <textarea name="bio" placeholder="give a brief description of this user"></textarea>
 
             <fieldset>
